tests/fixtures/invalid/table-array-implicit.stderr
TOML parse error at line 13, column 1
   |
13 | [[albums]]
   | ^
Duplicate key `albums` in `[]` table

While parsing a Table Header
